Update from https://github.com/babsballetschool/website/commit/7aa6e9f96357351dee2503476a4b422bab8eadac

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
             <div class="where"><span>home</span></div>
             <section><h1 id="zomer">Zomer</h1>
 <p><img src="resources/image/algemeen/zomervakantie.JPG.jpg" alt="Zomervakantie bij Babs Balletschool"> 
-Tijdens de zomermaanden zijn er geen lessen.</p>
-<p> De administratie is gesloten van 15 juli t/m 7 augustus.
-Een hele mooie zomer gewenst en tot dans in augustus! </p>
+Tijdens de zomermaanden zijn er geen lessen.
+De administratie is gesloten van 15 juli t/m 7 augustus.
+Vanaf 26 augustus beginnen de lessen weer. 
+Een hele mooie zomer gewenst!</p>
 </section><section><h1 id="dans-plezier">Dans plezier</h1>
 <p> Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Vanaf 26 augustus kun je vrijblijvend proeflessen komen doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
