Update from https://github.com/babsballetschool/website/commit/f54c079f8c7d9b69a866a0bd9c9000df10f0a8d6

--- a/contact.html
+++ b/contact.html
@@ -40,11 +40,11 @@ Voor informatie of een proefles neemt u contact op met Babs Broeders van Babs Ba
 <p>Mail naar <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="inschrijven">Inschrijven?</h1>
 <p><img src="resources/image/algemeen/pencil.jpg" alt="dansplezier bij Babs Balletschool">
-U schrijft altijd in per dansseizoen. Het dansseizoen duurt in seizoen 21-22 ongeveer 38 weken en loopt zoveel mogelijk gelijk met een schooljaar (basis onderwijs).
-Instromen in een seizoen kan ook, u betaalt dan vanaf moment van 1e les.</p>
+U schrijft altijd in per dansseizoen. Een dansseizoen duurt ongeveer 38 weken en loopt zoveel mogelijk gelijk met een schooljaar (basis onderwijs).
+Instromen tijdens het seizoen kan ook, u betaalt dan vanaf moment van 1e les.</p>
 <p>Een inschrijving is 1 dansseizoen geldig en loopt aan het einde van het seizoen af. U moet zich dus ieder nieuw dansseizoen weer opnieuw inschrijven.</p>
 <p>Klik hier voor inschrijven <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
-<p>De Korte Cursussen (12 x) worden vooraf aangekondigd. Kijk op website/instagram/facebook welke Korte Cursussen/Projecten er worden aangeboden. Voor de korte Cursussen en Projecten gelden andere tarieven.</p>
+<p>De Korte Cursussen (6 of 12 lessen) worden vooraf aangekondigd. Kijk op website/instagram/facebook welke Korte Cursussen/Projecten er worden aangeboden. Voor de korte Cursussen en Projecten gelden andere tarieven.</p>
 <p>voor vragen over de inschrijvingen of een aanvraag proefles stuurt u een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section>
         </main>
