--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <div class="where"><span>home</span></div>
             <section><h1 id="zomer">Zomer</h1>
 <p><img src="resources/image/algemeen/zomervakantie.JPG.jpg" alt="Zomervakantie bij Babs Balletschool"> 
-Tijdens de zomermaanden zijn er geen lessen.
-De administratie is gesloten van 15 juli t/m 7 augustus.
-Vanaf 26 augustus beginnen de lessen weer. 
-Een hele mooie zomer gewenst!</p>
+Tijdens de zomermaanden zijn er geen lessen.</p>
+<p>De administratie is gesloten van 15 juli t/m 7 augustus.</p>
+<p>Vanaf 26 augustus beginnen de lessen weer. </p>
+<p>Een hele mooie zomer gewenst!</p>
 </section><section><h1 id="dans-plezier">Dans plezier</h1>
 <p> Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Vanaf 26 augustus kun je vrijblijvend proeflessen komen doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
@@ -48,6 +48,10 @@ Wil je dit zelf ervaren? Vanaf 26 augustus kun je vrijblijvend proeflessen komen
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2024-2025</a></p>
 <p> Inschrijven voor seizoen 24-25:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
+</section><section><h1 id="open-dagopen-dag-bij-de-kik">Open Dag<img src="resources/image/algemeen/Open%20Dag%20(2).jpg" alt="Open Dag bij De KiK"></h1>
+<p>Wil je graag een keer kennis maken met ons of andere culturele activiteiten in theater De KiK? Kom dan naar de Open Dag op zondag 1 september. 
+Er zijn o.a. gratis workshops voor kinderen en volwassenen en je kunt kijken naar presentaties. 
+Programma volgt binnenkort.</p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
