Update from https://github.com/babsballetschool/website/commit/1f899bbe86fad14af041e03e2801889e26dcb484

--- a/links.html
+++ b/links.html
@@ -35,7 +35,7 @@
             <div class="where"><span>links</span></div>
             <section><h1 id="links">Links</h1>
 <ul>
-<li><p><a href="http://www.podium-nijmegen.nl/">Waar koop ik balletkleding?</a></p>
+<li><p><a href="http://www.danstheaterwinkel.nl/">Waar koop ik balletkleding?</a> (<a href="http://www.readytodance.nl/">http://www.readytodance.nl/</a>)</p>
 </li>
 <li><p><a href="http://www.theaterdekik.nl/">Theater de Kik in Elst</a></p>
 </li>
