Update from https://github.com/babsballetschool/website/commit/98cd971aeb5509d408c80d5f3f1a156ee171c07b

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Tijdens de zomermaanden zijn er geen lessen.</p>
 <p>De administratie is gesloten van 15 juli t/m 7 augustus.</p>
 <p>Vanaf 26 augustus beginnen de lessen weer. </p>
 <p>Een hele mooie zomer gewenst!</p>
-</section><section><h1 id="dans-plezier">Dans plezier</h1>
+</section><section><h1 id="dansplezier">Dansplezier</h1>
 <p> Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Vanaf 26 augustus kun je vrijblijvend proeflessen komen doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
@@ -52,6 +52,10 @@ Wil je dit zelf ervaren? Vanaf 26 augustus kun je vrijblijvend proeflessen komen
 <p>Wil je graag een keer kennis maken met ons of andere culturele activiteiten in theater De KiK? Kom dan naar de Open Dag op zondag 1 september. 
 Er zijn o.a. gratis workshops voor kinderen en volwassenen en je kunt kijken naar presentaties. 
 Programma volgt binnenkort.</p>
+</section><section><h1 id="paardenmarkt">Paardenmarkt</h1>
+<p><img src="resources/image/dancing%20horse.jpg" alt="Paardenmarkt bij Babs Balletschool"> 
+Op maandag 2 september is de Elster Paardenmarkt. 
+De balletschool is dan gesloten.</p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
