--- a/index.html
+++ b/index.html
@@ -33,15 +33,9 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="zomer">Zomer</h1>
-<p><img src="resources/image/algemeen/zomervakantie.JPG.jpg" alt="Zomervakantie bij Babs Balletschool"> 
-Tijdens de zomermaanden zijn er geen lessen.</p>
-<p>De administratie is gesloten van 15 juli t/m 7 augustus.</p>
-<p>Vanaf 26 augustus beginnen de lessen weer. </p>
-<p>Een hele mooie zomer gewenst!</p>
-</section><section><h1 id="dansplezier">Dansplezier</h1>
+            <section><h1 id="dansplezier">Dansplezier</h1>
 <p> Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
-Wil je dit zelf ervaren? Vanaf 26 augustus kun je vrijblijvend proeflessen komen doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
+Wil je dit zelf ervaren? Vanaf 26 augustus start ons dansseizoen weer en kun je vrijblijvend proeflessen komen doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
 <p> Nieuw rooster seizoen 24-25:
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2024-2025 bij Babs Balletschool"> 
@@ -50,8 +44,19 @@ Wil je dit zelf ervaren? Vanaf 26 augustus kun je vrijblijvend proeflessen komen
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="open-dagopen-dag-bij-de-kik">Open Dag<img src="resources/image/algemeen/Open%20Dag%20(2).jpg" alt="Open Dag bij De KiK"></h1>
 <p>Wil je graag een keer kennis maken met ons of andere culturele activiteiten in theater De KiK? Kom dan naar de Open Dag op zondag 1 september. 
-Er zijn o.a. gratis workshops voor kinderen en volwassenen en je kunt kijken naar presentaties. 
-Programma volgt binnenkort.</p>
+Er zijn o.a. dag met gratis creatieve workshops, proeflessen voor muziekinstrumenten, musicalsessies, zang- en danslessen. Of je nu op zoek bent naar een creatieve cursus, op ballet of musicalles wil, of een instrument wil uitproberen– het kan allemaal tijdens de Opening van het Culturele Seizoen bij Theater De KiK.
+Buiten op het Cultuurplein van De KiK ontmoet je verschillende culturele organisaties uit de Overbetuwe. Verwacht optredens van de Overbetuwse koren, bandjes, musical- en muziekvoorstellingen. Deze dag belooft een onvergetelijke, gezellige ervaring te worden voor jong en oud.
+Om teleurstellingen te voorkomen is reserveren voor de open lessen muziek en zang aan te bevelen via <a href="mailto:&#97;&#100;&#109;&#x69;&#x6e;&#105;&#115;&#116;&#x72;&#97;&#x74;&#105;&#x65;&#64;&#109;&#x75;&#x7a;&#105;&#101;&#x6b;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#97;&#108;&#x6c;&#109;&#117;&#115;&#105;&#x63;&#46;&#x6e;&#108;">&#97;&#100;&#109;&#x69;&#x6e;&#105;&#115;&#116;&#x72;&#97;&#x74;&#105;&#x65;&#64;&#109;&#x75;&#x7a;&#105;&#101;&#x6b;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#97;&#108;&#x6c;&#109;&#117;&#115;&#105;&#x63;&#46;&#x6e;&#108;</a>.
+Voor de dansworkshops hoef je je niet vooraf aan te melden en kun je gewoon langskomen. 
+<strong>Dans workshops in Studio:</strong><br>*Kleuterdans 4-5 jaar<br>*Kinderen Werelddans 6-9 
+*Modern voor volwassenen 
+*Werelddans voor volwasssenen 
+*Klassiek ballet </p>
+<p><strong>Dans presentaties is theaterzaal:</strong></p>
+<ul>
+<li>Moderne dans tieners</li>
+<li>Jazzballet tieners</li>
+</ul>
 </section><section><h1 id="paardenmarkt">Paardenmarkt</h1>
 <p><img src="resources/image/dancing%20horse.jpg" alt="Paardenmarkt bij Babs Balletschool"> 
 Op maandag 2 september is de Elster Paardenmarkt. 
