--- a/kleding.html
+++ b/kleding.html
@@ -135,7 +135,7 @@
 <p>T-shirt van  Babs Balletschool :          Volw: €22,-</p>
 <p>Leuke tas van de balletschool om alles in te doen? deze is te verkrijgen in de studio.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#98;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#108;">&#98;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#98;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#108;</a> </p>
+bestel via <a href="mailto:&#98;&#97;&#98;&#115;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#x61;&#108;&#x6c;&#101;&#116;&#115;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#110;&#108;">&#98;&#97;&#98;&#115;&#64;&#98;&#x61;&#98;&#x73;&#x62;&#x61;&#108;&#x6c;&#101;&#116;&#115;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#110;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
