Update from https://github.com/babsballetschool/website/commit/75f40a945145947eb5dc1da58768b78f690aeca6

--- a/index.html
+++ b/index.html
@@ -35,32 +35,16 @@
             <div class="where"><span>home</span></div>
             <section><h1 id="dansplezier">Dansplezier</h1>
 <p> Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
-Wil je dit zelf ervaren? Vanaf 26 augustus start ons dansseizoen weer en kun je vrijblijvend proeflessen komen doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
+Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
 <p> Nieuw rooster seizoen 24-25:
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2024-2025 bij Babs Balletschool"> 
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2024-2025</a></p>
 <p> Inschrijven voor seizoen 24-25:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
-</section><section><h1 id="open-dagopen-dag-bij-de-kik">Open Dag<img src="resources/image/algemeen/Open%20Dag%20(2).jpg" alt="Open Dag bij De KiK"></h1>
-<p>Wil je graag een keer kennis maken met ons of andere culturele activiteiten in theater De KiK? Kom dan naar de Open Dag op zondag 1 september. 
-Er zijn o.a. dag met gratis creatieve workshops, proeflessen voor muziekinstrumenten, musicalsessies, zang- en danslessen. Of je nu op zoek bent naar een creatieve cursus, op ballet of musicalles wil, of een instrument wil uitproberen– het kan allemaal tijdens de Opening van het Culturele Seizoen bij Theater De KiK.
-Buiten op het Cultuurplein van De KiK ontmoet je verschillende culturele organisaties uit de Overbetuwe. Verwacht optredens van de Overbetuwse koren, bandjes, musical- en muziekvoorstellingen. Deze dag belooft een onvergetelijke, gezellige ervaring te worden voor jong en oud.
-Om teleurstellingen te voorkomen is reserveren voor de open lessen muziek en zang aan te bevelen via <a href="mailto:&#97;&#100;&#109;&#x69;&#x6e;&#105;&#115;&#116;&#x72;&#97;&#x74;&#105;&#x65;&#64;&#109;&#x75;&#x7a;&#105;&#101;&#x6b;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#97;&#108;&#x6c;&#109;&#117;&#115;&#105;&#x63;&#46;&#x6e;&#108;">&#97;&#100;&#109;&#x69;&#x6e;&#105;&#115;&#116;&#x72;&#97;&#x74;&#105;&#x65;&#64;&#109;&#x75;&#x7a;&#105;&#101;&#x6b;&#x73;&#99;&#104;&#x6f;&#x6f;&#108;&#97;&#108;&#x6c;&#109;&#117;&#115;&#105;&#x63;&#46;&#x6e;&#108;</a>.
-Voor de dansworkshops hoef je je niet vooraf aan te melden en kun je gewoon langskomen. 
-<strong>Dans workshops in Studio:</strong><br>*Kleuterdans 4-5 jaar<br>*Kinderen Werelddans 6-9 
-*Modern voor volwassenen 
-*Werelddans voor volwasssenen 
-*Klassiek ballet </p>
-<p><strong>Dans presentaties is theaterzaal:</strong></p>
-<ul>
-<li>Moderne dans tieners</li>
-<li>Jazzballet tieners</li>
-</ul>
-</section><section><h1 id="paardenmarkt">Paardenmarkt</h1>
-<p><img src="resources/image/dancing%20horse.jpg" alt="Paardenmarkt bij Babs Balletschool"> 
-Op maandag 2 september is de Elster Paardenmarkt. 
-De balletschool is dan gesloten.</p>
+</section><section><h1 id="herfstvakantie">Herfstvakantie</h1>
+<p><img src="resources/image/algemeen/ballet-herfst.jpg" alt="Herfstvakantie bij Babs Balletschool"> 
+van 21 t/m 26 oktober is het herfstvakantie, er zijn dan geen lessen. </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
