--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <main class="">
             <div class="where"><span>home</span></div>
             <section><h1 id="dansplezier">Dansplezier</h1>
-<p> Plezier in dansen is er voor groot en klein. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
+<p>Plezier in dansen is er voor groot en klein. Wij delen de liefde voor dans met jullie. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
 <p> Nieuw rooster seizoen 24-25:
