--- a/kleding.html
+++ b/kleding.html
@@ -135,7 +135,7 @@
 <p>T-shirt van  Babs Balletschool :          Volw: €22,-</p>
 <p>Leuke tas van de balletschool om alles in te doen? deze is te verkrijgen in de studio.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#97;&#x62;&#x73;&#x40;&#98;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#110;&#108;">&#98;&#97;&#x62;&#x73;&#x40;&#98;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#110;&#108;</a> </p>
+bestel via <a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#116;&#115;&#99;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#108;">&#98;&#97;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#116;&#115;&#99;&#x68;&#x6f;&#111;&#x6c;&#46;&#110;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
