--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 <p><img src="resources/image/algemeen/ballet-herfst.jpg" alt="Herfstvakantie bij Babs Balletschool"> 
 van 21 t/m 26 oktober is het herfstvakantie, er zijn dan geen lessen. </p>
 </section><section><h1 id="prijsvraag-opendag">Prijsvraag OpenDag.</h1>
-<p>Tijdens de OpenDag afgelopen 1 september hebben een aantal kinderen mee gedaan met de prijsvraag. Jullie hadden heel veel vragen goed beantwoord.
+<p><img src="resources/image/algemeen/ballet-cinderella2.png" alt="Herfstvakantie bij Babs Balletschool"> 
+Tijdens de OpenDag afgelopen 1 september hebben een aantal kinderen mee gedaan met de prijsvraag. Jullie hadden heel veel vragen goed beantwoord.
 Degene met de meeste vragen goed is: Lauren uit K3. Gefeliciteerd, je prijsje komt zo snel mogelijk naar je toe. </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
