Update from https://github.com/babsballetschool/website/commit/7782d8fd04a4ddff221594076ae5e975f09cf4e3

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 van 21 t/m 26 oktober is het herfstvakantie, er zijn dan geen lessen. </p>
 </section><section><h1 id="prijsvraag-opendag">Prijsvraag OpenDag.</h1>
 <p><img src="resources/image/algemeen/ballet-cinderella2.png" alt="Herfstvakantie bij Babs Balletschool"> 
-Tijdens de OpenDag afgelopen 1 september hebben een aantal kinderen mee gedaan met de prijsvraag. Jullie hadden heel veel vragen goed beantwoord.
-Degene met de meeste vragen goed is: Lauren uit K3. Gefeliciteerd, je prijsje komt zo snel mogelijk naar je toe. </p>
+Tijdens de OpenDag afgelopen 1 september hebben een aantal kinderen mee gedaan met de prijsvraag.
+Jullie hadden heel veel vragen goed beantwoord.</p>
+<p>Degene met de meeste vragen goed is: Lauren uit K3. </p>
+<p>Gefeliciteerd, je prijsje komt zo snel mogelijk naar je toe. </p>
 </section><section><h1 id="schoolreisje">Schoolreisje</h1>
 <p><img src="resources/image/algemeen/Jubileumvoorstelling%E2%82%AC20assepoesters%E2%82%AC20(13).jpg" alt="Herfstvakantie bij Babs Balletschool"> 
 Mocht je het leuk vinden dan kun je in januari mee naar de voorstelling van Assepoester! kijk in de kleedkamer voor de aankondiging en inschrijving. </p>
