Update from https://github.com/babsballetschool/website/commit/bce62ba945afb993ae0d5d8c586f09dc73144d18

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Jullie hadden heel veel vragen goed beantwoord.</p>
 <p>Degene met de meeste vragen goed is: Lauren uit K3. </p>
 <p>Gefeliciteerd, je prijsje komt zo snel mogelijk naar je toe. </p>
 </section><section><h1 id="schoolreisje">Schoolreisje</h1>
-<p><img src="resources/image/algemeen/Jubileumvoorstelling%E2%82%AC20assepoesters%E2%82%AC20(13).jpg" alt="Herfstvakantie bij Babs Balletschool"> 
+<p><img src="resources/image/algemeen/Jubileumvoorstelling%20assepoesters%20(13).jpg" alt="Schoolreisje bij Babs Balletschool"> 
 Mocht je het leuk vinden dan kun je in januari mee naar de voorstelling van Assepoester! kijk in de kleedkamer voor de aankondiging en inschrijving. </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
