--- a/index.html
+++ b/index.html
@@ -37,20 +37,30 @@
 <p>Plezier in dansen is er voor groot en klein. Wij delen de liefde voor dans met jullie. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
-<p> Nieuw rooster seizoen 24-25:
+<p> Rooster seizoen 24-25:
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2024-2025 bij Babs Balletschool"> 
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2024-2025</a></p>
 <p> Inschrijven voor seizoen 24-25:
-<a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
-</section><section><h1 id="herfstvakantie">Herfstvakantie</h1>
-<p><img src="resources/image/algemeen/ballet-herfst.jpg" alt="Herfstvakantie bij Babs Balletschool"> 
-van 21 t/m 26 oktober is het herfstvakantie, er zijn dan geen lessen. </p>
-</section><section><h1 id="prijsvraag-opendag">Prijsvraag OpenDag.</h1>
-<p><img src="resources/image/algemeen/ballet-cinderella2.png" alt="Herfstvakantie bij Babs Balletschool"> 
-Tijdens de OpenDag afgelopen 1 september hebben een aantal kinderen mee gedaan met de prijsvraag.
-Jullie hadden heel veel vragen goed beantwoord.</p>
-<p>Degene met de meeste vragen goed is: Lauren uit K3. </p>
-<p>Gefeliciteerd, je prijsje komt zo snel mogelijk naar je toe. </p>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a>
+--</p>
+<h1 id="dance-on-stage">Dance on Stage</h1>
+<p>Op vrijdag 8 november is de eerste workshop van het Dansproject ‘Dance on Stage Overbetuwe’ in Theater De KiK in Elst. Een project speciaal voor jongeren in de Overbetuwe.
+Onder begeleiding van 2 professionele danscoaches organiseert Theater De KiK dansworkshops voor jongeren van middelbare schoolleeftijd. 
+Voor de groep 12 t/m 15 jaar Urban Dance / Breakdance. 
+Voor de deelnemers van 16+ Streetdance / Urban Dance / Hip Hop </p>
+<p>Wil je ook meedoen?
+Als je op een middelbare school in de Overbetuwe zit, of in de Overbetuwe woont, mag je GRATIS deelnemen aan de workshops. 
+Dans dus lekker mee tijdens de workshops en ontmoet andere jongeren of kom kijken op 13 december naar de finale, 
+tijdens de finale zullen ook groepen van Babs Balletschool zich presenteren.</p>
+<p>Inschrijven voor het project Dance On Stage Overbetuwe via <a href="https://theaterdekik.nl/projecten/dansproject/">https://theaterdekik.nl/projecten/dansproject/</a></p>
+<p>Workshoptijden, 6 vrijdagavonden:
+19:30 – 21:00 uur workshops Urban Dance / Breakdance
+21:00 – 22:30 uur workshops Streetdance / Urban Dance / Hiphop
+Data: 8-11 – 15/11 – 22/11 – 29/11 – 6/12 – 13/12 (finale)
+Locatie: Theater De KiK, Dorpsstraat 39 Elst</p>
+<p>Dit project is GRATIS voor de jongeren en wordt mogelijk gemaakt door: Fonds voor Cultuurparticipatie, Theater De KiK en Forte Jongerenwerk Overbetuwe.</p>
+</section><section><h1 id="kijk-lessen">Kijk lessen</h1>
+<p>in de week van 18 t/m 22 november zijn er weer kijk lessen. Ouders/familie zijn van harte welkom om tijdens de les naar de vorderingen te komen kijken.</p>
 </section><section><h1 id="schoolreisje">Schoolreisje</h1>
 <p><img src="resources/image/algemeen/Jubileumvoorstelling%20assepoesters%20(13).jpg" alt="Schoolreisje bij Babs Balletschool"> 
 Mocht je het leuk vinden dan kun je in januari mee naar de voorstelling van Assepoester! kijk in de kleedkamer voor de aankondiging en inschrijving. </p>
