Update from https://github.com/babsballetschool/website/commit/53f22ab9c87672ab3e0443855a93c23b8328ca03

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a>
 --</p>
 <h1 id="dance-on-stage">Dance on Stage</h1>
-<p>Op vrijdag 8 november is de eerste workshop van het Dansproject ‘Dance on Stage Overbetuwe’ in Theater De KiK in Elst. Een project speciaal voor jongeren in de Overbetuwe.
+<p><img src="resources/image/algemeen//Dans-project.JPG" alt="dansproject 2024-2025 bij Babs Balletschool"> 
+Op vrijdag 8 november is de eerste workshop van het Dansproject ‘Dance on Stage Overbetuwe’ in Theater De KiK in Elst. Een project speciaal voor jongeren in de Overbetuwe.
 Onder begeleiding van 2 professionele danscoaches organiseert Theater De KiK dansworkshops voor jongeren van middelbare schoolleeftijd. 
 Voor de groep 12 t/m 15 jaar Urban Dance / Breakdance. 
 Voor de deelnemers van 16+ Streetdance / Urban Dance / Hip Hop </p>
@@ -62,7 +63,7 @@ Locatie: Theater De KiK, Dorpsstraat 39 Elst</p>
 </section><section><h1 id="kijk-lessen">Kijk lessen</h1>
 <p>in de week van 18 t/m 22 november zijn er weer kijk lessen. Ouders/familie zijn van harte welkom om tijdens de les naar de vorderingen te komen kijken.</p>
 </section><section><h1 id="schoolreisje">Schoolreisje</h1>
-<p><img src="resources/image/algemeen/Jubileumvoorstelling%20assepoesters%20(13).jpg" alt="Schoolreisje bij Babs Balletschool"> 
+<p><img src="resources/image/algemeen/CinderellaRB2025.jpg" alt="Schoolreisje bij Babs Balletschool"> 
 Mocht je het leuk vinden dan kun je in januari mee naar de voorstelling van Assepoester! kijk in de kleedkamer voor de aankondiging en inschrijving. </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
