Update from https://github.com/babsballetschool/website/commit/b989bed7e8d3233698e33db7663e87acf09ae3a1

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@ Op vrijdag 8 november is de eerste workshop van het Dansproject ‘Dance on Stag
 Onder begeleiding van 2 professionele danscoaches organiseert Theater De KiK dansworkshops voor jongeren van middelbare schoolleeftijd. 
 Voor de groep 12 t/m 15 jaar Urban Dance / Breakdance. 
 Voor de deelnemers van 16+ Streetdance / Urban Dance / Hip Hop </p>
-<p>Wil je ook meedoen?
-Als je op een middelbare school in de Overbetuwe zit, of in de Overbetuwe woont, mag je GRATIS deelnemen aan de workshops. 
+<p>Wil je ook meedoen?</p>
+<p>Als je op een middelbare school in de Overbetuwe zit, of in de Overbetuwe woont, mag je GRATIS deelnemen aan de workshops. 
 Dans dus lekker mee tijdens de workshops en ontmoet andere jongeren of kom kijken op 13 december naar de finale, 
 tijdens de finale zullen ook groepen van Babs Balletschool zich presenteren.</p>
 <p>Inschrijven voor het project Dance On Stage Overbetuwe via <a href="https://theaterdekik.nl/projecten/dansproject/">https://theaterdekik.nl/projecten/dansproject/</a></p>
-<p>Workshoptijden, 6 vrijdagavonden:
-19:30 – 21:00 uur workshops Urban Dance / Breakdance
-21:00 – 22:30 uur workshops Streetdance / Urban Dance / Hiphop
-Data: 8-11 – 15/11 – 22/11 – 29/11 – 6/12 – 13/12 (finale)
-Locatie: Theater De KiK, Dorpsstraat 39 Elst</p>
+<p>Workshoptijden, 6 vrijdagavonden:</p>
+<p>19:30 – 21:00 uur workshops Urban Dance / Breakdance</p>
+<p>21:00 – 22:30 uur workshops Streetdance / Urban Dance / Hiphop</p>
+<p>Data: 8-11 – 15/11 – 22/11 – 29/11 – 6/12 – 13/12 (finale)</p>
+<p>Locatie: Theater De KiK, Dorpsstraat 39 Elst</p>
 <p>Dit project is GRATIS voor de jongeren en wordt mogelijk gemaakt door: Fonds voor Cultuurparticipatie, Theater De KiK en Forte Jongerenwerk Overbetuwe.</p>
 </section><section><h1 id="kijk-lessen">Kijk lessen</h1>
 <p>in de week van 18 t/m 22 november zijn er weer kijk lessen. Ouders/familie zijn van harte welkom om tijdens de les naar de vorderingen te komen kijken.</p>
