Update from https://github.com/babsballetschool/website/commit/da886b02e59c72e54e744913396b27823b457207

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ tijdens de finale zullen ook groepen van Babs Balletschool zich presenteren.</p>
 <p>Dit project is GRATIS voor de jongeren en wordt mogelijk gemaakt door: Fonds voor Cultuurparticipatie, Theater De KiK en Forte Jongerenwerk Overbetuwe.</p>
 </section><section><h1 id="kijk-lessen">Kijk lessen</h1>
 <p><img src="resources/image/algemeen/opendag%209-12-09%20023.JPG" alt="kijklessen bij Babs Balletschool"> 
-in de week van 18 t/m 22 november zijn er weer kijk lessen. Ouders/familie zijn van harte welkom om tijdens de les naar de vorderingen te komen kijken.</p>
+in de week van 18 t/m 22 november zijn er weer kijk lessen. 
+Ouders/familie zijn van harte welkom om tijdens de les naar de vorderingen te komen kijken.</p>
 </section><section><h1 id="schoolreisje">Schoolreisje</h1>
 <p><img src="resources/image/algemeen/CinderellaRB2025.jpg" alt="Schoolreisje bij Babs Balletschool"> 
 Mocht je het leuk vinden dan kun je in januari mee naar de voorstelling van Assepoester! kijk in de kleedkamer voor de aankondiging en inschrijving. </p>
