Update from https://github.com/babsballetschool/website/commit/ef606ef51967fd819d0702a59a37d405a807c1cb

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ tijdens de finale zullen ook groepen van Babs Balletschool zich presenteren.</p>
 <p>21:00 – 22:30 uur workshops Streetdance / Urban Dance / Hiphop</p>
 <p>Data: 8-11 – 15/11 – 22/11 – 29/11 – 6/12 – 13/12 (finale)</p>
 <p>Locatie: Theater De KiK, Dorpsstraat 39 Elst</p>
-<p>Dit project is GRATIS voor de jongeren en wordt mogelijk gemaakt door: Fonds voor Cultuurparticipatie, Theater De KiK en Forte Jongerenwerk Overbetuwe.</p>
+<p>Dit project is GRATIS voor de jongeren en wordt mogelijk gemaakt door: 
+Fonds voor Cultuurparticipatie, Theater De KiK en Forte Jongerenwerk Overbetuwe.</p>
 </section><section><h1 id="kijk-lessen">Kijk lessen</h1>
 <p><img src="resources/image/algemeen/opendag%209-12-09%20023.JPG" alt="kijklessen bij Babs Balletschool"> 
 in de week van 18 t/m 22 november zijn er weer kijk lessen. 
