Update from https://github.com/babsballetschool/website/commit/ace3e033af8ce3d1c1c8711d73b9bf6a897b7977

--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 <img src="resources/image/algemeen/balletklok.jpg" alt="dansrooster 2024-2025 bij Babs Balletschool"> 
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2024-2025</a></p>
 <p> Inschrijven voor seizoen 24-25:
-<a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a>
---</p>
-<h1 id="dance-on-stage">Dance on Stage</h1>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
+</section><section><h1 id="dance-on-stage">Dance on Stage</h1>
 <p><img src="resources/image/algemeen//Dans-project.JPG" alt="dansproject 2024-2025 bij Babs Balletschool"> 
 Op vrijdag 8 november is de eerste workshop van het Dansproject ‘Dance on Stage Overbetuwe’ in Theater De KiK in Elst. Een project speciaal voor jongeren in de Overbetuwe.
 Onder begeleiding van 2 professionele danscoaches organiseert Theater De KiK dansworkshops voor jongeren van middelbare schoolleeftijd. 
