Update from https://github.com/babsballetschool/website/commit/043266bbf9466597f43ea488c5a971063b255bf5

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 </section><section><h2 id="dans-projecten">Dans Projecten</h2>
 <p>Dans projecten worden apart aangekondigd en kunnen varieren in prijs afhankelijk van de duur van het project.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#98;&#115;&#64;&#x62;&#97;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#101;&#116;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#x2e;&#110;&#x6c;">&#98;&#97;&#98;&#115;&#64;&#x62;&#97;&#x62;&#x73;&#98;&#x61;&#108;&#108;&#101;&#116;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#x2e;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#108;&#x65;&#116;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#110;&#x6c;">&#x62;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#108;&#x65;&#116;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
