--- a/wanneer.html
+++ b/wanneer.html
@@ -44,9 +44,12 @@
 (er zijn die dag geen lessen) </p>
 <p><strong>Sjors Sportief week</strong>       9 t/m 13 september  2024
 (via Sjors Sportief doen kinderen uit omgeving proeflessen mee)</p>
+<p><strong>Vriendenlessen</strong>             14 t/m 18 oktober 
+leerlingen mogen een vriend(in) meenemen naar de les om hen te laten ervaren hoe leuk dansen is! </p>
 <p><strong>Herfstvakantie</strong>            21 t/m 25 oktober 2024
 (in de vakantie zijn er geen lessen)</p>
-<p> <strong>Kijk-lessen</strong>               2nog onbekend<br>(familie en vrienden kunnen een les komen bekijken)</p>
+<p> <strong>Kijk-lessen</strong>              18 t/m 22 november
+(familie en vrienden kunnen een les komen bekijken)</p>
 <p><strong>Pakjesavond</strong>                 5 december 2024
 (vanaf 18:00 vervallen de lessen) </p>
 <p><strong>Kerstvakantie</strong>               23 december 2024 t/m 3 januari 2025<br>(in de vakantie zijn er geen lessen)</p>
