--- a/kleding.html
+++ b/kleding.html
@@ -135,7 +135,7 @@
 <p>T-shirt van  Babs Balletschool :          Volw: €22,-</p>
 <p>Leuke tas van de balletschool om alles in te doen? deze is te verkrijgen in de studio.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#115;&#98;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#46;&#110;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#115;&#98;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#46;&#110;&#x6c;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#x62;&#x73;&#x40;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#x6c;&#46;&#110;&#x6c;">&#98;&#x61;&#x62;&#x73;&#x40;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#x6c;&#46;&#110;&#x6c;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
