--- a/kleding.html
+++ b/kleding.html
@@ -124,6 +124,12 @@
 <li>Zwarte legging /jazzbroek of zwarte panty zonder voet.</li>
 <li>Blote voeten/ footundies of zwarte sokken (geen anti-slip!)</li>
 </ul>
+</section><section><h1 id="werelddans">Werelddans:</h1>
+<ul>
+<li>zwart shirt/balletpak</li>
+<li>zwarte broek of een klok-rok</li>
+<li>caractére schoenen of balletschoenen</li>
+</ul>
 </section><section><h1 id="flamenco">Flamenco:</h1>
 <p><img src="resources/image/algemeen/Flamencoles.JPG" alt="Kleding voorschrift Babs Balletschool"></p>
 <ul>
@@ -135,7 +141,7 @@
 <p>T-shirt van  Babs Balletschool :          Volw: €22,-</p>
 <p>Leuke tas van de balletschool om alles in te doen? deze is te verkrijgen in de studio.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#x61;&#x62;&#x73;&#x40;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#x6c;&#46;&#110;&#x6c;">&#98;&#x61;&#x62;&#x73;&#x40;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#x74;&#115;&#x63;&#104;&#x6f;&#x6f;&#x6c;&#46;&#110;&#x6c;</a> </p>
+bestel via <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#108;&#108;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#108;&#108;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
