Update from https://github.com/babsballetschool/website/commit/44acbaf354b67efaeed74e031ce1ce2020b7a239

--- a/jazz.html
+++ b/jazz.html
@@ -35,8 +35,11 @@
             <div class="where"><span>jazz</span></div>
             <section><h1 id="jazz-ballet">Jazz ballet</h1>
 <p><img src="resources/image/8.jpg.png" alt="Jazz ballet bij Babs&#39;Balletschool"> </p>
-<p><strong>Jazzballet Volwassenen:</strong>  op maandagavond danst een groep volwassenen met Daphne. Door diverse danscominaties wordt er gewerkt aan houding,techniek en conditie en is het ook een swingende les. Instromen is zeker nog mogelijk. </p>
-<p><strong>Jazzballet Kids</strong> De Jazzballet lessen zijn op maandag middag voor 9+  en donderdag middag voor 14+, voor kids die niet kunnen stil zitten! De docenten gaan aan de slag met techniek en danscombinaties zodat de kids zich kunnen uitleven in dans. </p>
+<p><strong>Jazzballet Volwassenen:</strong>  op maandagavond danst een groep volwassenen met Daphne. Door diverse danscominaties wordt er gewerkt aan houding,techniek en conditie en is het ook een swingende les. 
+Instromen is zeker nog mogelijk. </p>
+<p><strong>Jazzballet tieners</strong> De Jazzballet lessen voor tieners zijn er op maandag voor 9+ en 12+ en op donderdag voor 15+. 
+ De docenten gaan aan de slag met techniek en danscombinaties zodat de dansers zich kunnen uitleven in dans, expressie en energie.</p>
+<p>Vraag een proefles aan via mailto:<a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#104;&#x6f;&#111;&#x6c;&#46;&#110;&#x6c;">&#98;&#x61;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#104;&#x6f;&#111;&#x6c;&#46;&#110;&#x6c;</a></p>
 </section>
         </main>
         <footer>
