--- a/ballet.html
+++ b/ballet.html
@@ -35,7 +35,7 @@
             <div class="where"><span>ballet</span></div>
             <section><h1 id="peuter-dans-p1">Peuter dans (P1)</h1>
 <p><img src="resources/image/algemeen/peuterdans%201.jpg" alt="Peuterdans">
-Kindjes van 2 tot 4 jaar kunnen in deze lessen vrij bewegen en kennis maken met dans en muziek. De les duurt drie kwartier en er mag een ouder/opa of oma  bij zijn. </p>
+Kindjes van 2 tot 4 jaar kunnen in deze lessen vrij bewegen en kennis maken met dans en muziek. De les duurt drie kwartier en een ouder/opa of oma danst met ze mee. </p>
 </section><section><h1 id="kleuter-ballet-k1">Kleuter Ballet (K1)</h1>
 <p><img src="resources/image/algemeen/Kleuterballet%20(2).JPG" alt="Kleuter Ballet">
 Voor kleuters binnen Babs Balletschool (groep 1 en 2 van de basisschool) zijn er de Kleuterlessen. Tijdens de Kleuterlessen worden de kinderen wegwijs gemaakt met de verschillende manier van voortbewegen en leren zij de basis principes van een balletles. Er wordt gebruik gemaakt van diverse soorten muziek (van kinderliedjes tot klassiek). Fantasie en inbeeldingen maken van de dansoefeningen een beleving. De Kleuterlessen duren 3 kwartier. Aan het eind van het schooljaar ontvangen de oudste kleuters een Dans Diploma waarmee zij mogen doorstromen naar het Kinderballet.</p>
