--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@ Voor informatie of een proefles neemt u contact op met Babs Broeders van Babs Ba
 U schrijft altijd in per dansseizoen. Een dansseizoen duurt ongeveer 38 weken en loopt zoveel mogelijk gelijk met een schooljaar (basis onderwijs).
 Instromen tijdens het seizoen kan ook, u betaalt dan vanaf moment van 1e les.</p>
 <p>Een inschrijving is 1 dansseizoen geldig en loopt aan het einde van het seizoen af. U moet zich dus ieder nieuw dansseizoen weer opnieuw inschrijven.</p>
-<p>Klik hier voor inschrijven <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
+<p>Klik hier voor inschrijven seizoen 24/25 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
 <p>De Korte Cursussen (6 of 12 lessen) worden vooraf aangekondigd. Kijk op website/instagram/facebook welke Korte Cursussen/Projecten er worden aangeboden. Voor de korte Cursussen en Projecten gelden andere tarieven.</p>
 <p>voor vragen over de inschrijvingen of een aanvraag proefles stuurt u een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section>
