--- a/dansproject.html
+++ b/dansproject.html
@@ -35,7 +35,7 @@
             <div class="where"><span>dansproject</span></div>
             <section><h1 id="dans-project">Dans Project</h1>
 <p>De dansprojecten op zaterdag zullen in de loop van het seizoen worden aangekondigd. </p>
-</section><section></section>
+</section>
         </main>
         <footer>
             <nav>
