--- a/kleding.html
+++ b/kleding.html
@@ -55,7 +55,7 @@
 <ul>
 <li><p>Roze of wit ballet pak hemdmodel of spaghettibandjes met vast rokje. (bijv. de Intermezzo 3057)</p>
 </li>
-<li><p>ballet panty met voetjes in huidskleur of roze</p>
+<li><p>ballet panty met voet in huidskleur of roze</p>
 </li>
 <li><p>canvas balletschoenen zonder anti-slip zool in huidskleur of roze</p>
 <p>   Of:</p>
@@ -73,7 +73,7 @@
 <ul>
 <li><p>Zwart balletpak hemdmodel of spaghettibandjes.</p>
 </li>
-<li><p>balletpanty met voetjes in huidskleur of roze</p>
+<li><p>balletpanty met voet in huidskleur of roze</p>
 </li>
 <li><p>canvas balletschoenen zonder anti-slip zool in huidskleur of roze</p>
 </li>
@@ -92,9 +92,9 @@
 <p><strong>combinatie 1:</strong></p>
 <ul>
 <li>Zwart balletpak.</li>
-<li>balletpanty met voetjes in huidskleur of roze</li>
+<li>balletpanty met voet in huidskleur of roze</li>
 <li>canvas balletschoenen met splitzool in huidskleur of roze</li>
-<li>Zwart broekje of rokje. (niet verplicht)</li>
+<li>Zwart kort broekje of rokje. (niet verplicht)</li>
 </ul>
 <p>Of:</p>
 <p><strong>combinatie 2:</strong></p>
@@ -107,7 +107,7 @@
 <p><img src="resources/image/algemeen/Klassiekballet%20volwassenen.JPG" alt="Kleding voorschrift Babs Balletschool"></p>
 <ul>
 <li>Zwart Balletpak</li>
-<li>zwarte legging of  balletpanty</li>
+<li>zwarte legging of  balletpanty </li>
 <li>canvas balletschoenen met splitzool in huidskleur of roze</li>
 </ul>
 </section><section><h1 id="jazz-ballet">Jazz ballet:</h1>
@@ -141,7 +141,12 @@
 <p>T-shirt van  Babs Balletschool :          Volw: €22,-</p>
 <p>Leuke tas van de balletschool om alles in te doen? deze is te verkrijgen in de studio.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#108;&#108;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#108;&#108;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a> </p>
+bestel via <a href="mailto:&#98;&#97;&#x62;&#115;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#108;">&#98;&#97;&#x62;&#115;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#x6e;&#108;</a> </p>
+</section><section><h1 id="winkels">winkels:</h1>
+<p><a href="https://www.dncstore.nl/">https://www.dncstore.nl/</a>
+<a href="https://www.danstheaterwinkel.nl/balletwinkel/?srsltid=AfmBOooh2ha7gvyBQaJcyvQ2vr4M7o4Q8uekk01LzoGKfb05N4CxK5-s">https://www.danstheaterwinkel.nl/balletwinkel/?srsltid=AfmBOooh2ha7gvyBQaJcyvQ2vr4M7o4Q8uekk01LzoGKfb05N4CxK5-s</a>
+<a href="https://www.ladans.nl/">https://www.ladans.nl/</a>
+<a href="https://www.danswinkeleindhoven.nl/">https://www.danswinkeleindhoven.nl/</a></p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
