--- a/modern.html
+++ b/modern.html
@@ -35,12 +35,14 @@
             <div class="where"><span>modern</span></div>
             <section><h1 id="moderne-dans">Moderne dans</h1>
 <p><img src="resources/image/collage-2015-04-28.jpg" alt="Collage van moderne dans"></p>
-<p>Moderne dans is een combinatie van danstechniek, flow, adem en zeker ook plezier. Heerlijk dansen op allerlei verschillende soorten muziek, lekker bewegen door de ruimte en werken met en tegen de zwaartekracht.
-Van oefeningen op de vloer, tot verplaatsingen over de diagonaal met als afsluiting natuurlijk een combinatie waarin alles terug komt en het puur om het dansgevoel en plezier gaat.
-Of je nu weinig of veel danservaring hebt, moderne dans is voor iedereen! De stijl geeft je de ruimte om je eigen bewegingsmogelijkheden te ontdekken en jezelf te blijven ontwikkelen.
-Naast technisch onderbouwde lessen staat dansplezier zeker voorop. Graag delen zij hun dansplezier met hun leerlingen!
-Geen drempels, kom het gewoon proberen!</p>
+<p>Moderne dans is een combinatie van danstechniek, flow, adem en zeker ook plezier.
+Heerlijk dansen op allerlei verschillende soorten muziek, lekker bewegen door de ruimte en werken met en tegen de zwaartekracht.</p>
+<p>Van oefeningen op de vloer, tot verplaatsingen over de diagonaal met als afsluiting natuurlijk een combinatie waarin alles terug komt en het puur om het dansgevoel en plezier gaat.</p>
+<p>Moderne dans is voor iedereen!
+De stijl geeft je de ruimte om je eigen bewegingsmogelijkheden te ontdekken en jezelf te blijven ontwikkelen.
+Naast technisch onderbouwde lessen staat dansplezier zeker voorop bij de docenten, graag delen zij hun dansplezier met hun leerlingen!</p>
 <p>Kom langs voor een vrijblijvende proefles.</p>
+<p>We verzorgen lessen op maandag en donderdag. (zie het rooster) </p>
 </section>
         </main>
         <footer>
