--- a/wanneer.html
+++ b/wanneer.html
@@ -62,8 +62,8 @@ leerlingen mogen een vriend(in) meenemen naar de les om hen te laten ervaren hoe
 (er zijn dan geen lessen) </p>
 <p><strong>2e Pinksterdag</strong>              maandag 9 juni 2025
 (dit is een vrije dag, er zijn geen lessen) </p>
-<p>**Generale repetitie **         dinsdag 10 juni 2025<br> (va 15:00)</p>
-<p><strong>Voorstelling in Musis Sacrum Arnhem</strong> zaterdag 14 juni 2025
+<p><strong>Generale repetitie</strong>         dinsdag 10 juni 2025<br> (va 15:00)</p>
+<p><strong>Voorstelling in Musis Sacrum Arnhem</strong>  zaterdag 14 juni 2025
 (hele dag) </p>
 <p><strong>Orientatie week</strong>              16 juni t/m 20 juni 2025<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
 <p> <strong>Diploma lessen</strong>               23 juni t/m 27 juni 2025<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
