Update from https://github.com/babsballetschool/website/commit/b4af86945912c49c38f09bf3e435ced5b04a921f

--- a/index.html
+++ b/index.html
@@ -42,32 +42,21 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2024-2025</a></p>
 <p> Inschrijven voor seizoen 24-25:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
-</section><section><h1 id="dance-on-stage">Dance on Stage</h1>
-<p><img src="resources/image/algemeen//Dans-project.JPG" alt="dansproject 2024-2025 bij Babs Balletschool"> 
-Op vrijdag 8 november is de eerste workshop van het Dansproject ‘Dance on Stage Overbetuwe’ in Theater De KiK in Elst. Een project speciaal voor jongeren in de Overbetuwe.
-Onder begeleiding van 2 professionele danscoaches organiseert Theater De KiK dansworkshops voor jongeren van middelbare schoolleeftijd. 
-Voor de groep 12 t/m 15 jaar Urban Dance / Breakdance. 
-Voor de deelnemers van 16+ Streetdance / Urban Dance / Hip Hop </p>
-<p>Wil je ook meedoen?</p>
-<p>Als je op een middelbare school in de Overbetuwe zit, of in de Overbetuwe woont, mag je GRATIS deelnemen aan de workshops. 
-Dans dus lekker mee tijdens de workshops en ontmoet andere jongeren of kom kijken op 13 december naar de finale, 
-tijdens de finale zullen ook groepen van Babs Balletschool zich presenteren.</p>
-<p>Inschrijven voor het project Dance On Stage Overbetuwe via <a href="https://theaterdekik.nl/projecten/dansproject/">https://theaterdekik.nl/projecten/dansproject/</a></p>
-<p>Workshoptijden, 6 vrijdagavonden:</p>
-<p>19:30 – 21:00 uur workshops Urban Dance / Breakdance</p>
-<p>21:00 – 22:30 uur workshops Streetdance / Urban Dance / Hiphop</p>
-<p>Data: 8-11 – 15/11 – 22/11 – 29/11 – 6/12 – 13/12 (finale)</p>
-<p>Locatie: Theater De KiK, Dorpsstraat 39 Elst</p>
-<p>Dit project is GRATIS voor de jongeren en wordt mogelijk gemaakt door: 
-Fonds voor Cultuurparticipatie, Theater De KiK en Forte Jongerenwerk Overbetuwe.</p>
-</section><section><h1 id="kijk-lessen">Kijk lessen</h1>
-<p><img src="resources/image/algemeen/opendag%209-12-09%20023.JPG" alt="kijklessen bij Babs Balletschool"> 
-in de week van 18 t/m 22 november zijn er weer kijk lessen. 
-Ouders/familie zijn van harte welkom om tijdens de les naar de vorderingen te komen kijken.</p>
-</section><section><h1 id="schoolreisje">Schoolreisje</h1>
-<p><img src="resources/image/algemeen/CinderellaRB2025.jpg" alt="Schoolreisje bij Babs Balletschool"> 
-Mocht je het leuk vinden dan kun je in januari mee naar de voorstelling van Assepoester! kijk in de kleedkamer voor de aankondiging en inschrijving. </p>
-</section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
+</section><section><h1 id="dansconditie">Dansconditie</h1>
+<p>Voor de liefhebber starten we binnenkort een aantal nieuwe cursussen: 
+<img src="resources/image/algemeen/dansconditie.jpg" alt="Dansconditie bij Babs Balletschool"> 
+Start het nieuwe jaar fit en vol energie! 
+Dans je in vorm met onze Dansconditie lessen! Combineer energieke dansmoves met effectieve krachtoefeningen en werk aan een sterker, fitter lichaam. 
+De les wordt afgesloten met een ontspannen stretch en een verfrissende cooling-down.
+Voel je fit, dans jezelf blij! Schrijf je nu in voor een korte cursus van 6 weken. </p>
+</section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
+<p>Voor de liefhebber starten we binnenkort een aantal nieuwe cursussen:
+<img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
+Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
+Er zijn ontzettend veel Pilates oefeningen die elk lichaamsdeel kunnen trainen, maar uiteindelijk draait alles om je core (buikspieren). 
+Met Pilates verbeter je jouw kracht, flexibiliteit, houding en balans.
+Schrijf je nu in voor een korte cursus van 8 lessen.</p>
+<h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
 </section><section><h1 id="floor-of-fame">Floor of Fame</h1>
