Update from https://github.com/babsballetschool/website/commit/23baf29780d3ec16763f713bd57a95ccc8dc9bd0

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
 Er zijn ontzettend veel Pilates oefeningen die elk lichaamsdeel kunnen trainen, maar uiteindelijk draait alles om je core (buikspieren). 
 Met Pilates verbeter je jouw kracht, flexibiliteit, houding en balans.
 Schrijf je nu in voor een korte cursus van 8 lessen.</p>
-<h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
+</section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
 </section><section><h1 id="floor-of-fame">Floor of Fame</h1>
