--- a/links.html
+++ b/links.html
@@ -35,6 +35,8 @@
             <div class="where"><span>links</span></div>
             <section><h1 id="links">Links</h1>
 <ul>
+<li><p><a href="https://www.nederlanddanst.nl/">nederland danst</a></p>
+</li>
 <li><p><a href="https://onsoverbetuwe.nl/">onsoverbetuwe</a></p>
 </li>
 <li><p><a href="http://www.danstheaterwinkel.nl/">Waar koop ik balletkleding?</a></p>
