Update from https://github.com/babsballetschool/website/commit/472831651638a59f16f46f0101b816955570cd4e

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="dansplezier">Dansplezier</h1>
-<p>Plezier in dansen is er voor groot en klein. Wij delen de liefde voor dans met jullie. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
+            <section><p>le# Dansplezier 
+Plezier in dansen is er voor groot en klein. Wij delen de liefde voor dans met jullie. <img src="resources/image/algemeen/kinderballet%20(2).JPG" alt="dansplezier bij Babs Balletschool"> 
 Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor het aanvragen van een proefles <a href="mailto:babs@babsballetschool.nl">contact</a></p>
 </section><section><h1 id="dansrooster--jaarplanning">Dansrooster &amp; jaarplanning</h1>
 <p> Rooster seizoen 24-25:
@@ -43,19 +43,16 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 <p> Inschrijven voor seizoen 24-25:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
 </section><section><h1 id="dansconditie">Dansconditie</h1>
-<p>Voor de liefhebber starten we binnenkort een aantal nieuwe cursussen: 
-<img src="resources/image/algemeen/dansconditie.jpg" alt="Dansconditie bij Babs Balletschool"> 
-Start het nieuwe jaar fit en vol energie! 
-Dans je in vorm met onze Dansconditie lessen! Combineer energieke dansmoves met effectieve krachtoefeningen en werk aan een sterker, fitter lichaam. 
+<p><img src="resources/image/algemeen/dansconditie.jpg" alt="Dansconditie bij Babs Balletschool"> 
+Dans je fit met onze Dansconditie lessen! Combineer energieke dansmoves met effectieve krachtoefeningen en werk aan een sterker, fitter lichaam. 
 De les wordt afgesloten met een ontspannen stretch en een verfrissende cooling-down.
-Voel je fit, dans jezelf blij! Schrijf je nu in voor een korte cursus van 6 weken. </p>
+Voel je fit, dans jezelf blij! Schrijf je nu in voor een korte cursus van 6 weken. Bij voldoende deelnemers gaat de les door. </p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
-<p>Voor de liefhebber starten we binnenkort een aantal nieuwe cursussen:
-<img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
+<p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
 Er zijn ontzettend veel Pilates oefeningen die elk lichaamsdeel kunnen trainen, maar uiteindelijk draait alles om je core (buikspieren). 
 Met Pilates verbeter je jouw kracht, flexibiliteit, houding en balans.
-Schrijf je nu in voor een korte cursus van 8 lessen.</p>
+Schrijf je nu in voor de cursus Pilates. </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
