Update from https://github.com/babsballetschool/website/commit/95078e9d8385040e0acf1fe992d74cb04f48f0e8

--- a/index.html
+++ b/index.html
@@ -42,17 +42,20 @@ Wil je dit zelf ervaren? Kom vrijblijvend een proefles doen. Stuur een mail voor
 <a href="https://www.babsballetschool.nl/wanneer.html">Rooster 2024-2025</a></p>
 <p> Inschrijven voor seizoen 24-25:
 <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">Inschrijfformulier</a></p>
-</section><section><h1 id="dansconditie">Dansconditie</h1>
-<p><img src="resources/image/algemeen/dansconditie.jpg" alt="Dansconditie bij Babs Balletschool"> 
-Dans je fit met onze Dansconditie lessen! Combineer energieke dansmoves met effectieve krachtoefeningen en werk aan een sterker, fitter lichaam. 
-De les wordt afgesloten met een ontspannen stretch en een verfrissende cooling-down.
-Voel je fit, dans jezelf blij! Schrijf je nu in voor een korte cursus van 6 weken. Bij voldoende deelnemers gaat de les door. </p>
 </section><section><h1 id="pilates-op-mat">Pilates op mat</h1>
 <p><img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"> 
 Pilates bestaat uit een serie oefeningen die je op een mat kunt uitvoeren.
 Er zijn ontzettend veel Pilates oefeningen die elk lichaamsdeel kunnen trainen, maar uiteindelijk draait alles om je core (buikspieren). 
 Met Pilates verbeter je jouw kracht, flexibiliteit, houding en balans.
-Schrijf je nu in voor de cursus Pilates. </p>
+Schrijf je nu in voor de laatste cursus Pilates van dit seizoen. (12 mei t/m 23 juni m.u.v. 9 juni). 
+Na de zomer starten we weer met een nieuwe cursus. </p>
+</section><section><h1 id="voorstelling-samen">Voorstelling: SAMEN</h1>
+<p>![dansvoorstelling SAMEN Babs Balletschool](resources/image/algemeen/SAMEN 2025.jpg)
+Onze leerlingen dansen <strong>zaterdag 14 juni</strong> in de grote leerlingen voorstelling in het Musis in Arnhem. 
+We zijn natuurlijk ontzettend trots! Kom vooral allemaal kijken om ze aan te moedigen! 
+Tickets: <a href="https://www.musisenstadstheater.nl/nl/agenda">https://www.musisenstadstheater.nl/nl/agenda</a>
+Wil je ook een bijdrage leveren? dat kan in de vorm van sponsoring of lieve hulp achter de schermen. 
+mail naar <a href="mailto:&#98;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#101;&#116;&#115;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#108;">&#98;&#97;&#98;&#x73;&#x40;&#x62;&#97;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#101;&#116;&#115;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#108;</a> </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs Balletschool"> 
   Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
